# prog-c-

number-variant-sujet/: CMakeLists.txt  readme.md
number-variant-sujet/include/: arithmetic.hpp  number_factory.hpp  printing.hpp  types.hpp
number-variant-sujet/src/: arithmetic.cpp  main.cpp  number_factory.cpp  printing.cpp  ut
